--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <title>This is my github pages</title>
 </head>
 <body>
-    <h1>Welcome to <VIJAYLETCHUMIKRISHNAN.github.iol</VIJAYLETCHUMIKRISHNAN></h1>
-    console.clear()
-function maxMinAvg(arr) {
-    var max = arr[0]
-    var min = arr[0]
-    var sum = arr[0]
-    for (var i = 1; i < arr.length; i++) {
-        if (arr[i] > max) {
-            max = arr[i];
-        }
-        if (arr[i] < min) {
-         min = arr[i]
-        }
-        sum = sum + arr[i]
-    }
-    return [max, min, sum/arr.length]
+    <h1>ASSIGNMENT MINMAXAVG</h11>
+    console.clear()<br /> 
+    function maxMinAvg(arr) {<br /> 
+    var max = arr[0]<br /> 
+    var min = arr[0]<br /> 
+    var sum = arr[0]<br /> 
+    for (var i = 1; i < arr.length; i++) {<br /> 
+        if (arr[i] > max) {<br /> 
+            max = arr[i];<br /> 
+        }<br /> 
+        if (arr[i] < min) {<br /> 
+         min = arr[i]<br /> 
+        }<br /> 
+        sum = sum + arr[i]<br /> 
+    }<br /> 
+    return [max, min, sum/arr.length]<br /> 
  
-} 
-console.log(maxMinAvg([8, 6, 22, 4]))
+} <br /> 
+console.log(maxMinAvg([8, 6, 22, 4]))<br /> 
 </body>
 </html>
