--- a/assignment/assignment.html
+++ b/assignment/assignment.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-
     console.clear()<br/>
 function maxMinAvg(arr) {<br/>
     var max = arr[0]<br/>
@@ -25,6 +24,6 @@ function maxMinAvg(arr) {<br/>
     return [max, min, sum/arr.length]<br/>
  
 } <br/>
-console.log(maxMinAvg([6, 3, 20, 2]))<br/>
+console.log(maxMinAvg([6, 3, 20, 2]))
 </body>
 </html>
