--- a/pppp/list.html
+++ b/pppp/list.html
@@ -60,6 +60,10 @@
                             <th scope="col">Id</th>
                             <th scope="col">Name</th>
                             <th scope="col">Email</th>
+                            <th scope="col">From</th>
+                            <th scope="col">To</th>
+                            <th scope="col">Onward Date</th>
+                            <th scope="col">Return Date</th>
                             <th scope="col">Pax</th>
                             <th scope="col">Remarks</th>
                             <th scope="col">Task</th>
