--- a/pppp/index.html
+++ b/pppp/index.html
@@ -44,10 +44,10 @@
         <div class="row">
             <div class="col">
                 <div class="jumbotron">
-                    <h1 class="display-4">Discover your tast palates!</h1>
-                    <p class="lead">With thousands menu to choose from, the only thing you need is your gut!</p>
+                    <h1 class="display-4">WELCOME TO BUS BOOKING SYSTEM!</h1>
+                    <p class="lead">BUS ONLINE TIKET</p>
                     <hr class="my-4">
-                    <a class="btn btn-primary btn-lg" href="book.html" role="button">I'm ready, lets do this!</a>
+                    <a class="btn btn-primary btn-lg" href="book.html" role="button">Please Click Here to Book a sit of Bus!</a>
                 </div>
             </div>
         </div>
