--- a/pppp/book.html
+++ b/pppp/book.html
@@ -90,6 +90,15 @@
                     <label for="userRemarks">Remarks</label>
                     <textarea class="form-control" id="userRemarks" rows="3"></textarea>
                 </div>
+
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label for="userFrom">From</label>
+                    <textarea class="form-control" id="userFrom" rows="3"></textarea>
+                </div>
+                
+
                 <button type="button" class="btn btn-primary float-right" id="bookNow">Book Now</button>
             </div>
         </div>
